--- a/src/components/Toggle.css
+++ b/src/components/Toggle.css
@@ -10,7 +10,7 @@ p {
 }
 
 .toggle {
-    background-color: hsl(224, 36%, 15%);
+    background-color: var(--keypad-background);
     border-radius: 30px;
     display: inline-block;
     position: relative;
@@ -36,7 +36,7 @@ label {
 .selector {
     height: 30px;
     width: 30px;
-    background-color: hsl(6, 63%, 50%);
+    background-color: var(--key-red-background);
     border-radius: 30px;
     top: 2px;
     left: 2px;
@@ -55,6 +55,14 @@ label {
 
 .third-theme:checked~.selector {
     left: 62px;
+}
+
+body.theme-two p {
+    color: var(--text-dark);
+}
+
+body.theme-three p {
+    color: var(--text-yellow);
 }
 
 @media(max-width: 420px) {
